Added javascript game to projects page
A little game that I ported. Made in the early days of SunQuest

--- a/projects.html
+++ b/projects.html
@@ -144,14 +144,11 @@
 								<div class="inner">
 									<header class="major">
 										<h2>Play One of Our Games</h2>
-										<p>(This only works on certain browsers and with Java installed)</p>
 									</header>
-									<applet code="jump/screen.class" archive="game/wow.jar" height=400 width=400>
 
-									</applet>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
+											<canvas id="game" width="480" height="320"></canvas>
+
+											<script type="text/javascript" src="game/jsGame.js"></script>
 								</div>
 							</section>
 
