--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="images/hackathons.jpg" />
 									</span>
 									<header class="major">
 										<h3><a href="aboutMe.html" class="link">About me.</a></h3>
@@ -92,6 +92,16 @@
 										<p>See what tech floats my boat</p>
 									</header>
 								</article>
+									<article>
+									<span class="image">
+										<img src="images/hackathons.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="hackathons.html" class="link">Hackathons.</a></h3>
+										<p>Hackathons I've attended</p>
+									</header>
+								</article>
+
 								<article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
@@ -100,6 +110,11 @@
 										<h3><a href="interests.html" class="link">Interests.</a></h3>
 										<p>All the other things I do.</p>
 									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/thatsAll.png"></img>
+									</span>
 								</article>
 
 					</div>
