Updated Hackathon Page. Made forms work
Updated hackathon page, interests page and made forms work using formspree.

--- a/hackathons.html
+++ b/hackathons.html
@@ -197,22 +197,16 @@
 								</section>
 								<section id="four">
 									<a href="experience.html" class="image">
-										<img src="images/experience/dnd.jpg" alt="" data-position="25% 25%" />
+										<img src="images/hackathons/uottahack.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Department of National Defence</h3>
-												<p>Debert, Nova Scotia</p>
-												<p>June 2016 - Aug. 2016</p>
+												<h3>UOttaHack</h3>
+												<p>University of Ottawa</p>
+												<p>Feb. 2018</p>
 											</header>
-											<p>This was my sixth and last cadet summer placement. While there I worked as a ground crew supervisor, duties included:
-												<ul class="fa-ul">
-													<li><i class="fa fa-fighter-jet"></i>Orchestrated the retrieval of landed glider aircraft at active airport</li>
-													<li><i class="fa fa-fighter-jet"></i>Trained cadet personnel of safety protocols</li>
-													<li><i class="fa fa-fighter-jet"></i>Conducted daily inspections of air and land based vehicles</li>
-													<li><i class="fa fa-fighter-jet"></i>Acted as a liaison between adult staff, other camp counselors and cadet personnel</li>
-												</ul>
+											<p> This was my first ever hackathon! Our idea for this event was to create an app where you could take a picture of a store recipt and a backend would then generate a form containing all the nutritional value for your groceries. I  created a script which enhanced, biniarized and processed a photo through an optical processing engine. The code can be seen  <a href="https://github.com/frankie-eight-days/mlh_Hackathons/tree/master/uOttaHack18">here</a>. Unfortunatly, the UPC/FDA database we had scoped out for the project wasn't compatable with the proprietery item codes used by Costco (Our store of choice). Our team tried to pivot but we unfortunatly failed. Lots of lessons were learned and we had a good time anyways!
 											</p>
 										</div>
 									</div>
