--- a/interests.html
+++ b/interests.html
@@ -65,12 +65,40 @@
 									<header class="major">
 										<h2>Catch My Drift</h2>
 									</header>
-									<p>My interests really change with the semesters, because I really don't typically spend much time doing any of them. These are the ones that have mainly persisted throughout the years. Otherwise, I'm probably clicked down some rabbit hole learning/reading about something new.</p>
+									<p>My interests really change with the semesters. These are the ones that have mainly persisted throughout the years. Otherwise, I'm probably clicked down some rabbit hole learning/reading about something new.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
+								<section>
+									<a href="interests.html" class="image">
+										<img src="images/interests/wine.jpg" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Winemaking</h3>
+											</header>
+											<p>As college student, there are comprimises I have to make in order to be able to travel to hackathons, travel and do things with friends. Alchol in Canada is expensive and that was not something I wanted to comprimise, so, I took up winemaking in an effort to save money. So far, I've only brewed using kits, however, once Newfoundland's famous bakeapples come into season, I will be attempting to create a bakeapple wine. Stay tuned!</p>
+										</div>
+									</div>
+								</section>
+
+								<section>
+									<a href="interests.html" class="image">
+										<img src="images/interests/fitness.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Fitness</h3>
+											</header>
+											<p>"Results don't occur when you want them to". That's what one of my friends told me when I declined his offer to go to the gym. I was very hungover at the time, however, this made a lot of sense in my head at the time. And from then onwards, I keep a very strict 6 day lifting/cardio fittness regimine. After two months I began to tone up. I now realize that it's very important to take care of your health and better yourself in every way possible.</p>
+										</div>
+									</div>
+								</section>
+
 								<section>
 									<a href="interests.html" class="image">
 										<img src="images/interests/tv.jpg" alt="" data-position="center center" />
@@ -84,6 +112,7 @@
 										</div>
 									</div>
 								</section>
+
 								<section>
 									<a href="generic.html" class="image">
 										<img src="images/interests/coffee.jpg" alt="" data-position="top center" />
@@ -94,9 +123,6 @@
 												<h3>Specialty Coffee</h3>
 											</header>
 											<p>But I mean who doesn't like coffee? For me, there's nothing like a good cup of Joe. I take mine very seriously. My Starbucks order is a Skinny Cinnamon Dolce Latte, that being said I their coffee is only okay. The best cup of Coffee I've ever had was Jumping Bean Lighthouse Roast. As of writing this the only place you can buy it is in Newfoundland and select Walmarts in Ontario. If you ever get the chance, I highly reccomend you try it out!</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
 										</div>
 									</div>
 								</section>
