--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/fkw155@mun.ca">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -134,7 +134,7 @@
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
+										<textarea name="message" id="message" rows="16"></textarea>
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="special" /></li>
@@ -153,38 +153,28 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
+											<h3>Phone</h3>
 										<span>(709)-764-7076</span>
 									</div>
 								</section>
 								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>6 Ellacombe Street<br />
-										Torbay, Newfoundland<br />
-										Canada</span>
-									</div>
+									<span class="icon alt fa-map-marker"></span>
+										<h3>Location</h3>
+									<span>St. John's, Newfoundland, Canada</span>
+								</section>
+								<section>
+									<span class="icon alt fa-github"></span>
+										<h3>Github</h3>
+									<span>github.com/frankie-eight-days</span>
+								</section>
+								<section>
+									<span class="icon alt fa-linkedin"></span>
+										<h3>Linkedin</h3>
+									<span>linkedin.com/in/francis-walsh/</span>
 								</section>
 							</section>
 						</div>
 					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Francis Walsh</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
 
 			</div>
 
