updated some things
Updated form submission. Changed some photos. Changed contact info and navigation menu

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutMe.html">About me</a></li>
 							<li><a href="experience.html">Experience</a></li>
-							<li><a href="elements.html">Projects</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="hackathons.html">Hackathons</a></li>
 							<li><a href="intrests.html">Interests</a></li>
 							<li><a href="frankRes.pdf">Resume</a></li>
 						</ul>
@@ -158,19 +159,25 @@
 									</div>
 								</section>
 								<section>
-									<span class="icon alt fa-map-marker"></span>
-										<h3>Location</h3>
-									<span>St. John's, Newfoundland, Canada</span>
+									<div class="contact-method">
+										<span class="icon alt fa-map-marker"></span>
+											<h3>Location</h3>
+										<span>St. John's, Newfoundland, Canada</span>
+									</div>
 								</section>
 								<section>
-									<span class="icon alt fa-github"></span>
-										<h3>Github</h3>
-									<span>github.com/frankie-eight-days</span>
+									<div class="contact-method">
+										<span class="icon alt fa-github"></span>
+											<h3>Github</h3>
+										<span><a href="www.github.com/frankie-eight-days">github.com/frankie-eight-days</a></span>
+									</div>
 								</section>
 								<section>
-									<span class="icon alt fa-linkedin"></span>
-										<h3>Linkedin</h3>
-									<span>linkedin.com/in/francis-walsh/</span>
+									<div class="contact-method">
+										<span class="icon alt fa-linkedin"></span>
+											<h3>Linkedin</h3>
+										<span><a href="www.linkedin.com/in/francis-walsh/">linkedin.com/in/francis-walsh/</a></span>
+									</div>
 								</section>
 							</section>
 						</div>
