edited small grammar mistakes
Thanks for editing mom

--- a/experience.html
+++ b/experience.html
@@ -223,11 +223,12 @@
 												<p>Kanata, Ontario</p>
 												<p>Jan 2018 - April 2018</p>
 											</header>
-											<p>This is where I completed my second and most recent work term. While working here my responsiblities included:
+											<p>This is where I completed my second and most recent work term. While there I worked in a fast-paced reasearch and design labratory. I worked closely alongside the 7750 Service Router team to aid in developing next generation telecoms equipment. Day-to-day activities included:
 												<ul class="fa-ul">
 													<li><i class="fa fa-wifi"></i>Diagnosing and repairing prototype server boards</li>
+													<li><i class="fa fa-wifi"></i>Suggesting design changes based upon verification testing</li>
 													<li><i class="fa fa-wifi"></i>Writing scripts in Perl to automate tedious tasks</li>
-													<li><i class="fa fa-wifi"></i>Used various state of the art instruments to verify hardware</li>
+													<li><i class="fa fa-wifi"></i>Used various state of the art instruments to verify hardware (Network analyzers and high speed osciloscopes)</li>
 												</ul>
 											</p>
 										</div>
