--- a/hackathons.html
+++ b/hackathons.html
@@ -84,9 +84,9 @@
 								<span class="inner">
 									<ul class="actions">
 										<li><a href="#one" class="button next scrolly">Interactive Map</a></li>
-										<li><a href="#two" class="button next scrolly">UOttaHacks</a></li>
+										<li><a href="#two" class="button next scrolly">SFHacks</a></li>
 										<li><a href="#three" class="button next scrolly">SteelHacks</a></li>
-										<li><a href="#four" class="button next scrolly">SFHacks</a></li>
+										<li><a href="#four" class="button next scrolly">UOttaHack</a></li>
 									</ul>
 								</span>
 										<h1>The places I've hacked:</h1>
@@ -186,7 +186,7 @@
 												<p>Pittsburgh, Pennslivanya, USA</p>
 												<p>Feb. 2018</p>
 											</header>
-											<p>This hackathon took place at the university of Pittsburgh. Myself and my team member drove 10 hours to get there. While there we created a software package to detect whether or not somebody is sleeping. Some possible applications of this project could be to help keep drivers, pilots and heavy equipment operators alert, help identify if someone is having a stroke or keep sleepy students awake when they are cramming! To see the full project see our devpost <a href="https://devpost.com/software/dri-c-ve">here.</a>
+											<p>This hackathon took place at the University of Pittsburgh. My friend and I traveled a ten hour drive from Ottawa to Pittsburgh. While there we created a software package to detect if a person is falling asleep. Some possible applications of this project could be to help keep drivers, pilots and heavy equipment operators alert, help identify if someone is having a stroke or keep sleepy students awake when they are cramming! To see the full project see our devpost <a href="https://devpost.com/software/dri-c-ve">here.</a>
 											</p>
 
 											<p>
@@ -206,7 +206,7 @@
 												<p>University of Ottawa</p>
 												<p>Feb. 2018</p>
 											</header>
-											<p> This was my first ever hackathon! Our idea for this event was to create an app where you could take a picture of a store recipt and a backend would then generate a form containing all the nutritional value for your groceries. I  created a script which enhanced, biniarized and processed a photo through an optical processing engine. The code can be seen  <a href="https://github.com/frankie-eight-days/mlh_Hackathons/tree/master/uOttaHack18">here</a>. Unfortunatly, the UPC/FDA database we had scoped out for the project wasn't compatable with the proprietery item codes used by Costco (Our store of choice). Our team tried to pivot but we unfortunatly failed. Lots of lessons were learned and we had a good time anyways!
+											<p> This was my first ever hackathon! Our idea for this event was to create an app where you could take a picture of a store recipt and a backend would then generate a form containing all the nutritional value for your groceries. I  created a script which enhanced, biniarized and processed a photo through an optical processing engine. The code can be seen  <a href="https://github.com/frankie-eight-days/mlh_Hackathons/tree/master/uOttaHack18">here</a>. Unfortunatly, the UPC/FDA database we had scoped out for the project wasn't compatable with the proprietery item codes used by Costco (Our store of choice). Our team tried to pivot but we unfortunatly were not successful. Lots of lessons were learned and we had a good time anyways!
 											</p>
 										</div>
 									</div>
@@ -219,7 +219,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/fkw155@mun.ca">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -230,7 +230,7 @@
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
+										<textarea name="message" id="message" rows="16"></textarea>
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="special" /></li>
@@ -249,38 +249,35 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
+											<h3>Phone</h3>
 										<span>(709)-764-7076</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>6 Ellacombe Street<br />
-										Torbay, Newfoundland<br />
-										Canada</span>
+										<span class="icon alt fa-map-marker"></span>
+											<h3>Location</h3>
+										<span>St. John's, Newfoundland, Canada</span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon alt fa-github"></span>
+											<h3>Github</h3>
+										<span><a href="www.github.com/frankie-eight-days">github.com/frankie-eight-days</a></span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon alt fa-linkedin"></span>
+											<h3>Linkedin</h3>
+										<span><a href="www.linkedin.com/in/francis-walsh/">linkedin.com/in/francis-walsh/</a></span>
 									</div>
 								</section>
 							</section>
 						</div>
 					</section>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
 
 			</div>
 
