--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi! My name is Francis Walsh</h1>
+								<h1>My name is Francis Walsh</h1>
 							</header>
 							<div class="content">
 								<p>I'm a second year electrical engineering student<br />
