--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
 								<h1>Projects</h1>
 							</header>
 							<div class="content">
-								<p>See what kinda tech gets me excited.</p>
+								<p>See what kind of tech gets me excited.</p>
 							</div>
 						</div>
 					</section>
@@ -79,7 +79,7 @@
 									<header class="major">
 										<h2>Overview</h2>
 									</header>
-									<p>Between classes and work, I supplement my thirst for learning with various projects. Apart from smaller day-to-day projects you can see on my Github I have two main ones: MUN's SAE Aerospace Club and SunQuest Games. One hardware and one software. See more below! 
+									<p>Apart from classes and work, I supplement my thirst for learning with various projects. Apart from smaller day-to-day projects which you can see on my Github I have two main ones: MUN's SAE Aerospace Club and SunQuest Games. One comprises of hardware, the other is software based. See more below! 
 
 									</p>
 									<span class="inner">
@@ -104,7 +104,7 @@
 												<p>Electrical Design Lead</p>
 												<p>Nov. 2016 - Present</p>
 											</header>
-											<p>The SAE Aerospace competition is an international event where universities design and build UAVs. There are several tasks that these aircraft must complete. I oversee the team's electrical division and lead them in developing software and hardware. Tasks include:
+											<p>The SAE Aerospace competition is an international event whereWhere students of different universities are challenged to design and build UAVs. There are several tasks that these aircraft must complete. I oversee the team's electrical division and lead them in developing both the software and hardware components. Tasks include:
 												<ul class="fa-ul">
 													<li><i class="fa fa-plane"></i>Designing/Fabricating power distribution circuits for airborne and ground based systems</li>
 													<li><i class="fa fa-plane"></i>Creating Arduino based aircraft information systems using various sensors and RF transmitters</li>
@@ -126,7 +126,7 @@
 												<p>CEO/CTO</p>
 												<p>Dec. 2014 - Present</p>
 											</header>
-											<p>SunQuest Games is a small games 'company' I run with my friends. We get togehter on the weekends to develop games and other small applications. My role in the company is as follows:
+											<p>SunQuest Games is a small games 'company' I run with several colleagues. We get togehter on the weekends to develop games and other small applications. My role in the company is as follows:
 												<ul class="fa-ul">
 													<li><i class="fa fa-gamepad"></i>Construction and continuing development of Java based game engine</li>
 													<li><i class="fa fa-gamepad"></i>Directing art and music design</li>
