--- a/aboutMe.html
+++ b/aboutMe.html
@@ -65,7 +65,7 @@
 									<header class="major">
 										<h2>Bio</h2>
 									</header>
-									<p>I am a second year, Term IV electrical engineering student with a passion for design. During high school, I had the opportunity to obtain my private pilot's license. Learning about the inner workings of aircraft electrical and instrumentation systems intrigued me. These early beginnings ignited my interest in engineering and have since fueled my endeavors. This lead to achieving a variety of goals that have developed my technical and interpersonal skills. This includes co-ops at both a large energy and telecoms company, a variety of different programming pursuits, electrical hobby projects, and participation in a plethora of team activities.</p>
+									<p>I am a second year, Term IV Electrical Engineering student with a passion for design. During high school, I had the opportunity to obtain my private pilot's license. Learning about the inner workings of aircraft electrical and instrumentation systems intrigued me. These early beginnings ignited my interest in engineering and have since fueled my endeavors. This lead to achieving a variety of goals that have developed my technical and interpersonal skills.This included co-ops at both an energy and telecommunications company, a variety of different programming pursuits, electrical hobby projects, and participation in a plethora of team activities.</p>
 								<span class="inner">
 									<ul class="actions">
 										<li><a href="#two" class="button next scrolly">Cadet Career</a></li>
@@ -86,8 +86,8 @@
 											<header class="major">
 												<h3>Cadet Career</h3>
 											</header>
-											<p>I spent six years involved with the 508 Caribou Royal Canadian Air Cadets. During this time I worked my way up the ranks, achieving the highest rank (Warrant Officer First Class) at the age of sixteen. Highlights of my senior cadet career include:<li>Organizing events including provincial sports days, survial outings and fundraisers</li>
-												<li>Coaching a marching team that placed twice at a provincial level</li>
+											<p>I spent six years involved with the 508 Caribou Royal Canadian Air Cadets. I worked my way up achieving the highest rank of of Warrant Officer First Class at the age of sixteen. Highlights of my senior cadet career include:<li>Organizing events including provincial sports days, survial outings and fundraisers</li>
+												<li>Coaching a marching team that placed twice at the Provincial level </li>
 												<li>Recieving Most Outstanding Cadet award, two years running</li>
 												<li>Participating in six different summer training camps which included the Private Pilot Scholarship, Glider Pilot Scholarship and Advanced Aviation</li></p>
 										</div>
@@ -102,7 +102,7 @@
 											<header class="major">
 												<h3>Aviation Career</h3>
 											</header>
-											<p>Completing the Private and Glider Pilot Scholarships with cadets earned me a Transport Canada Private and Glider Pilot License, as well as an Industry Canada Aeronautical Radio License. In attempts to give back to the local cadet community I volunteered my time as both a volunteer pilot and groundschool instructor. As a volunteer pilot I familiarized new cadets from all around Newfoundland with the Air Cadet flying program by taking them for flights in the Air Cadet Gliders. As a ground school instructor I taught classes on a weekly basis on various topics ranging from metorology, navigation, theory of flight and air law.</p>
+											<p>Currently, I not only have a private pilot’s license, and a glider pilot’s license with Transport Canada, but also an Industry Canada radio license. In attempts to give back to the local cadet community I volunteered my time as both a volunteer pilot and groundschool instructor. As a volunteer pilot I familiarized new cadets from all around Newfoundland with the Air Cadet flying program by taking them for flights in the Air Cadet Gliders. As a ground school instructor I taught classes on a weekly basis on various topics ranging from metorology, navigation, theory of flight and air law.</p>
 										</div>
 									</div>
 								</section>
@@ -113,7 +113,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/fkw155@mun.ca">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -124,7 +124,7 @@
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
+										<textarea name="message" id="message" rows="16"></textarea>
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="special" /></li>
@@ -143,38 +143,34 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
+											<h3>Phone</h3>
 										<span>(709)-764-7076</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>6 Ellacombe Street<br />
-										Torbay, Newfoundland<br />
-										Canada</span>
+										<span class="icon alt fa-map-marker"></span>
+											<h3>Location</h3>
+										<span>St. John's, Newfoundland, Canada</span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon alt fa-github"></span>
+											<h3>Github</h3>
+										<span><a href="www.github.com/frankie-eight-days">github.com/frankie-eight-days</a></span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon alt fa-linkedin"></span>
+											<h3>Linkedin</h3>
+										<span><a href="www.linkedin.com/in/francis-walsh/">linkedin.com/in/francis-walsh/</a></span>
 									</div>
 								</section>
 							</section>
 						</div>
 					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
 
 			</div>
 
