Made experience banner work
yay

--- a/experience.html
+++ b/experience.html
@@ -223,7 +223,7 @@
 												<p>Kanata, Ontario</p>
 												<p>Jan 2018 - April 2018</p>
 											</header>
-											<p>This is where I completed my second and most recent work term. While there I worked in a fast-paced reasearch and design labratory. I worked closely alongside the 7750 Service Router team to aid in developing next generation telecoms equipment. Day-to-day activities included:
+											<p>This is where I completed my second and most recent work term. While there I worked in a fast-paced reasearch and design labratory. I was heavily invloved with the 7750 Service Router design team and aided in developing next generation telecoms equipment. Day-to-day activities included:
 												<ul class="fa-ul">
 													<li><i class="fa fa-wifi"></i>Diagnosing and repairing prototype server boards</li>
 													<li><i class="fa fa-wifi"></i>Suggesting design changes based upon verification testing</li>
