--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/experience/experienceBanner.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="experience.html" class="link">Experience.</a></h3>
