attempting to fix links
Trying to see if I can fix links

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">fkw155@mun.ca</a>
+										<a href="#">mailto:francis.walsh@mun.ca</a>
 									</div>
 								</section>
 								<section>
@@ -169,14 +169,14 @@
 									<div class="contact-method">
 										<span class="icon alt fa-github"></span>
 											<h3>Github</h3>
-										<span><a href="www.github.com/frankie-eight-days">github.com/frankie-eight-days</a></span>
+										<span><a href="http://www.github.com/frankie-eight-days">github.com/frankie-eight-days</a></span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-linkedin"></span>
 											<h3>Linkedin</h3>
-										<span><a href="www.linkedin.com/in/francis-walsh/">linkedin.com/in/francis-walsh/</a></span>
+										<span><a href="http://www.linkedin.com/in/francis-walsh/">linkedin.com/in/francis-walsh/</a></span>
 									</div>
 								</section>
 							</section>
