Made some small changes
Some small changes

--- a/experience.html
+++ b/experience.html
@@ -223,12 +223,13 @@
 												<p>Kanata, Ontario</p>
 												<p>Jan 2018 - April 2018</p>
 											</header>
-											<p>This is where I completed my second and most recent work term. While there I worked in a fast-paced reasearch and design labratory. I was heavily invloved with the 7750 Service Router design team and aided in developing next generation telecoms equipment. Day-to-day activities included:
+											<p>Nokia Networks is a leader in the Telecommunications industry. At Nokia I worked in their R&D hardware lab developing next-generation routers. This gave me the opportunity to work closely with a team of highly dedicated designers and learn the ins-and-outs of high speed electronics design and embedded system architecture. Highlights include:
 												<ul class="fa-ul">
-													<li><i class="fa fa-wifi"></i>Diagnosing and repairing prototype server boards</li>
-													<li><i class="fa fa-wifi"></i>Suggesting design changes based upon verification testing</li>
-													<li><i class="fa fa-wifi"></i>Writing scripts in Perl to automate tedious tasks</li>
-													<li><i class="fa fa-wifi"></i>Used various state of the art instruments to verify hardware (Network analyzers and high speed osciloscopes)</li>
+													<li><i class="fa fa-wifi"></i>Redesigned legacy timing schematics saving Nokia an estimated $74,000.0</li>
+													<li><i class="fa fa-wifi"></i>Reworked over 250 boards using a variety of techniques</li>
+													<li><i class="fa fa-wifi"></i>Debugged R&D boards using a variety of tools</li>
+													<li><i class="fa fa-wifi"></i>Created scripts in Perl and Python for automating tedious lab tasks</li>
+													<li><i class="fa fa-wifi"></i>Used various state of the art lab tools to verify signal integritys</li>
 												</ul>
 											</p>
 										</div>
@@ -245,12 +246,12 @@
 												<p>All Over Newfoundland and Labrador</p>
 												<p>May 2017 - Sept. 2017</p>
 											</header>
-											<p>This is where I completed my second workterm in the summer of 2017. My work here was split 50%/50% between field work and office work. The work included:
+											<p>The Lower Churchill Project is Newfoundland and Labrador's biggest undertaking in infrastructure development since the 1960s. The project includes building an 824 MW hydroelectric generation facility and over 1600 km of overhead transmission lines. My work with the project was split half-and-half between the office and the field. This gave me a unique opportunity in developing project management skills and learning about the latest in HVdc transmission techniques. Some highlights include:
 												<ul class="fa-ul">
-													<li><i class="fa fa-bolt"></i>Conducting inspections of newly built HVdc and HVac tranmission lines</li>
+													<li><i class="fa fa-bolt"></i>Inspecting over 1100 newly built HVdc and HVac transmission towers</li>
 													<li><i class="fa fa-bolt"></i>Communicating and directing contractor re-work</li>
 													<li><i class="fa fa-bolt"></i>Developing scripts in VBA and Python for future employee use</li>
-													<li><i class="fa fa-bolt"></i>Developing/delivering training to personnel for use of the Project Completions System</li>
+													<li><i class="fa fa-bolt"></i>Developing/delivering training to personnel in use of completions system in a construction site setting</li>
 												</ul>
 											</p>
 										</div>
@@ -267,7 +268,7 @@
 												<p>Debert, Nova Scotia</p>
 												<p>June 2016 - Aug. 2016</p>
 											</header>
-											<p>This was my sixth and last cadet summer placement. While there I worked as a ground crew supervisor, duties included:
+											<p>TEvery summer, 42 outstanding Air Cadets from Atlantic Canada are selected to participate in the Glider Pilot Scholarship Program. After completing the course myself, I returned to work as a Ground Crew Supervisor. During this time I also acted as Warrant Officer Second Class taking control of group 'A' which included 21 cadets and 7 other staff. Duties included:
 												<ul class="fa-ul">
 													<li><i class="fa fa-fighter-jet"></i>Orchestrated the retrieval of landed glider aircraft at active airport</li>
 													<li><i class="fa fa-fighter-jet"></i>Trained cadet personnel of safety protocols</li>
