--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">mailto:francis.walsh@mun.ca</a>
+										<a href="mailto:francis.walsh@mun.ca">francis.walsh@mun.ca</a>
 									</div>
 								</section>
 								<section>
