Fixed all of experience page

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -34,6 +34,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutMe.html">About me</a></li>
 							<li><a href="generic.html">Experience</a></li>
+							<li><a href="hackathons.html">Hackathons</a></li>
 							<li><a href="elements.html">Projects</a></li>
 							<li><a href="intrests.html">Interests</a></li>
 							<li><a href="frankRes.pdf">Resume</a></li>
