--- a/experience.html
+++ b/experience.html
@@ -48,16 +48,18 @@
 
 				<!-- Menu -->
 <!-- Menu -->
-					<<nav id="menu">
+					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutMe.html">About me</a></li>
-							<li><a href="experience.html">Experience</a></li>
-							<li><a href="projects.html">Projects</a></li>
+							<li><a href="generic.html">Experience</a></li>
+							<li><a href="hackathons.html">Hackathons</a></li>
+							<li><a href="elements.html">Projects</a></li>
 							<li><a href="intrests.html">Interests</a></li>
 							<li><a href="frankRes.pdf">Resume</a></li>
 						</ul>
 					</nav>
+
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
@@ -225,9 +227,10 @@
 											</header>
 											<p>Nokia Networks is a leader in the Telecommunications industry. At Nokia I worked in their R&D hardware lab developing next-generation routers. This gave me the opportunity to work closely with a team of highly dedicated designers and learn the ins-and-outs of high speed electronics design and embedded system architecture. Highlights include:
 												<ul class="fa-ul">
-													<li><i class="fa fa-wifi"></i>Redesigned legacy timing schematics saving Nokia an estimated $74,000.0</li>
+													<li><i class="fa fa-wifi"></i>Redesigned legacy timing schematics saving Nokia an estimated $74,000.00</li>
 													<li><i class="fa fa-wifi"></i>Reworked over 250 boards using a variety of techniques</li>
 													<li><i class="fa fa-wifi"></i>Debugged R&D boards using a variety of tools</li>
+													<li><i class="fa fa-wifi"></i>Brought-up newly manufactured boards</li>
 													<li><i class="fa fa-wifi"></i>Created scripts in Perl and Python for automating tedious lab tasks</li>
 													<li><i class="fa fa-wifi"></i>Used various state of the art lab tools to verify signal integritys</li>
 												</ul>
