added some minor changes to experience

--- a/experience.html
+++ b/experience.html
@@ -271,7 +271,7 @@
 												<p>Debert, Nova Scotia</p>
 												<p>June 2016 - Aug. 2016</p>
 											</header>
-											<p>TEvery summer, 42 outstanding Air Cadets from Atlantic Canada are selected to participate in the Glider Pilot Scholarship Program. After completing the course myself, I returned to work as a Ground Crew Supervisor. During this time I also acted as Warrant Officer Second Class taking control of group 'A' which included 21 cadets and 7 other staff. Duties included:
+											<p>Every summer, 42 outstanding Air Cadets from Atlantic Canada are selected to participate in the Glider Pilot Scholarship Program. After completing the course myself, I returned to work as a Ground Crew Supervisor. During this time I also acted as Warrant Officer Second Class taking control of group 'A' which included 21 cadets and 7 other staff. Duties included:
 												<ul class="fa-ul">
 													<li><i class="fa fa-fighter-jet"></i>Orchestrated the retrieval of landed glider aircraft at active airport</li>
 													<li><i class="fa fa-fighter-jet"></i>Trained cadet personnel of safety protocols</li>
