--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutMe.html">About me</a></li>
-							<li><a href="experience.html">Experience</a></li>
+							<li><a href="generic.html">Experience</a></li>
+							<li><a href="hackathons.html">Hackathons</a></li>
 							<li><a href="elements.html">Projects</a></li>
 							<li><a href="intrests.html">Interests</a></li>
 							<li><a href="frankRes.pdf">Resume</a></li>
