fixed projects/game page

--- a/projects.html
+++ b/projects.html
@@ -146,10 +146,12 @@
 									<header class="major">
 										<h2>Play One of Our Games</h2>
 									</header>
-
 											<canvas id="game" width="480" height="320"></canvas>
-
 											<script type="text/javascript" src="game/jsGame.js"></script>
+											<p>W: Jump </p>
+											<p>A: Left </p>
+											<p>D: Right </p>
+											<p>Click: Reset Game</p>
 								</div>
 							</section>
 
@@ -233,3 +235,4 @@
 
 	</body>
 </html>
+
