Updated hackathon page

--- a/hackathons.html
+++ b/hackathons.html
@@ -135,13 +135,13 @@
   											});
 
         									var infowindow3 = new google.maps.InfoWindow({
-											    content: '<font color="black"><h2 style="color:black;">Eagle Camp</h2><img ALIGN="Center" style="max-width:400px;height:auto;" src="images/experience/map/eagleCamp.jpg">'+
-											    '<p>A temporary camp I stayed at while working in Central Labrador. I completed one three week rotation here.</p></font>',
+											    content: '<font color="black"><h2 style="color:black;">SFHacks</h2><img ALIGN="Center" style="max-width:400px;height:auto;" src="images/hackathons/sanFran.jpg">'+
+											    '<p>The Hackathon we won. Can you tell how excited we were to be here?</p></font>',
 											});
         									var marker3 = new google.maps.Marker({
         										position: uSF,
         										animation: google.maps.Animation.DROP,
-        										title: 'Hawkes Bay, NL',
+        										title: 'San Francisco, USA',
         										label: 'NE',
         										map: map
         									});
@@ -161,7 +161,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="experience.html" class="image">
-										<img src="images/hackathons/sfHacks.jpg" alt="" data-position="center center" />
+										<img src="images/hackathons/sfhacks.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -170,14 +170,14 @@
 												<p>San Francisco, California, USA</p>
 												<p>March 2018</p>
 											</header>
-											<p>Stay tuned!!
+											<p>This was the hackathon that my team and I won! In 24 hours me and my team managed to create a robot that used a custom IBM Watson image classifier to identify suspicious people. I was responsible for sourcing data and training the classifier. You can read more about the project in this <a href="http://www.thetelegram.com/business/mun-student-part-of-winning-team-at-san-francisco-hackathon-201535/#.WtDRVyMIRcg.linkedin">article.</a> Additionally you can see the Git repo <a href="https://github.com/megalphian/PaulieBlart">here!</a>
 											</p>
 										</div>
 									</div>
 								</section>
 								<section id="three">
 									<a href="experience.html" class="image">
-										<img src="images/hackathons/steelHacksDisplay.png" alt="" data-position="25% 25%" />
+										<img src="images/hackathons/steelHacksMoe.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -197,7 +197,7 @@
 								</section>
 								<section id="four">
 									<a href="experience.html" class="image">
-										<img src="images/hackathons/uottahack.png" alt="" data-position="25% 25%" />
+										<img src="images/hackathons/uOttaHack.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
